@@ -28,7 +28,6 @@ import java.net.URI;
 import java.util.Collections;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -109,8 +108,8 @@ public class BureauOfficerAllocatedRepliesControllerTest extends AbstractIntegra
         assertThat(exchange.getBody().getData().size()).isEqualTo(2);
 
         List<BureauOfficerAllocatedData> carneson =
-            exchange.getBody().getData().stream().filter(r -> r.getLogin().equals("carneson"))
-                .collect(Collectors.toList());
+            exchange.getBody().getData().stream().filter(r -> "carneson".equals(r.getLogin()))
+                .toList();
         assertThat(carneson.size()).isEqualTo(1);
         assertThat(carneson.get(0).getName()).isEqualToIgnoringCase("Chad Arneson");
         assertThat(carneson.get(0).getAllReplies()).isEqualTo(8);
@@ -118,8 +117,8 @@ public class BureauOfficerAllocatedRepliesControllerTest extends AbstractIntegra
         assertThat(carneson.get(0).getNonUrgent()).isEqualTo(2);
 
         List<BureauOfficerAllocatedData> mruby =
-            exchange.getBody().getData().stream().filter(r -> r.getLogin().equals("mruby"))
-                .collect(Collectors.toList());
+            exchange.getBody().getData().stream().filter(r -> "mruby".equals(r.getLogin()))
+                .toList();
         assertThat(mruby.size()).isEqualTo(1);
         assertThat(mruby.get(0).getName()).isEqualToIgnoringCase("Martin Ruby");
         assertThat(mruby.get(0).getAllReplies()).isEqualTo(4);
